--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -17,7 +17,7 @@
   <meta property="og:description" content="">
   <meta property="og:site_name"   content="">
   <meta property="og:type"        content="">
-  <title>Youtube Socket.io</title>
+  <title>Defqon.1 2015 - Realtime Updates</title>
   <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://cdn.socket.io/socket.io-1.1.0.js" charset="utf-8"></script>
 </head>
