--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -5,18 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
   <meta name="viewport"              content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="cleartype"       content="on">
-  <meta name="description"           content="">
-  <meta name="keywords"              content="">
+  <meta name="description"           content="Get the realtime updates from Instagram about Defqon.1 2015">
+  <meta name="keywords"              content="qdance defqon1 hardstyle">
   <meta name="fragment"              content="!" />
 
   <!-- facebook metatags -->
-  <meta property="fb:app_id"      content="">
-  <meta property="og:title"       content="">
-  <meta property="og:url"         content="">
-  <meta property="og:image"       content="">
-  <meta property="og:description" content="">
-  <meta property="og:site_name"   content="">
-  <meta property="og:type"        content="">
+  <meta property="og:title"       content="Defqon.1 2015 - Realtime Updates">
+  <meta property="og:url"         content="http://defqon2015.herokuapp.com/">
+  <meta property="og:image"       content="http://www.defqon1.nl/wp-content/uploads/2015/02/imgo.jpeg">
+  <meta property="og:description" content="Get the realtime updates from Instagram about Defqon.1 2015">
+  <meta property="og:site_name"   content="Defqon.1 2015 - Realtime Updates">
+  <meta property="og:type"        content="website">
   <title>Defqon.1 2015 - Realtime Updates</title>
   <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://cdn.socket.io/socket.io-1.1.0.js" charset="utf-8"></script>
