--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -12,7 +12,7 @@
   <!-- facebook metatags -->
   <meta property="og:title"       content="Defqon.1 2015 - Realtime Updates">
   <meta property="og:url"         content="http://defqon2015.herokuapp.com/">
-  <meta property="og:image"       content="http://www.defqon1.nl/wp-content/uploads/2015/02/imgo.jpeg">
+  <meta property="og:image"       content="http://defqon2015.herokuapp.com/images/share_fb.jpg">
   <meta property="og:description" content="Get the realtime updates from Instagram about Defqon.1 2015">
   <meta property="og:site_name"   content="Defqon.1 2015 - Realtime Updates">
   <meta property="og:type"        content="website">
