--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -175,7 +175,18 @@ figure {
 
   iframe {
     width: 100%;
-    height: 100%;
+  }
+
+  .defqon-chat-iframe {
+    height: 50vh;
+  }
+
+  .defqon-livestream-player {
+    height: 50vh;
+
+    iframe {
+      height: 80%;
+    }
   }
 
   @media screen and (min-width: rem(768px)) {
