--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -25,7 +25,12 @@
       </li>
     </ul>
     <div class="defqon-chat">
-      <iframe src="http://tlk.io/defqon2015" width="100%" height="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
+      <div class="defqon-chat-iframe">
+        <iframe src="http://tlk.io/defqon2015" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
+      </div>
+      <div class="defqon-livestream-player">
+        <iframe src="http://www.twitch.tv/beatport/embed" frameborder="0" scrolling="no" height="278" width="100%"></iframe><a href="http://www.twitch.tv/beatport?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from Beatport on www.twitch.tv</a>
+      </div>
     </div>
   </div>
 
