--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -174,9 +174,10 @@ figure {
 }
 .defqon-chat .defqon-chat-iframe {
   height: 50vh;
+  overflow: auto;
 }
 .defqon-chat .defqon-chat-iframe iframe {
-  height: 90%;
+  height: 100%;
 }
 .defqon-chat .defqon-livestream-player {
   height: 50vh;
