--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -26,7 +26,7 @@ figure {
   margin: 0;
 }
 
-.reset-list, .defqon-feed {
+.reset-list, .defqon-instagram-feed {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -42,7 +42,7 @@ figure {
   height: 10vh;
   display: flex;
   align-items: center;
-  padding-left: 1.25rem;
+  justify-content: center;
 }
 
 .defqon-header-nav {
@@ -69,41 +69,70 @@ figure {
   width: 100%;
   padding-top: 10vh;
 }
+
+.defqon-livestream-player-chat {
+  width: 100%;
+  height: 50vh;
+  padding: 4%;
+}
+.defqon-livestream-player-chat .defqon-livestream-player {
+  height: 100%;
+}
+.defqon-livestream-player-chat .defqon-livestream-player iframe {
+  height: 100%;
+}
+.defqon-livestream-player-chat .defqon-livestream-player iframe + a {
+  display: none !important;
+}
 @media screen and (min-width: 48rem) {
-  .defqon-main {
+  .defqon-livestream-player-chat {
+    padding: 2%;
     display: flex;
     flex-direction: row;
+    height: 70vh;
   }
 }
 
-.defqon-feed {
+.defqon-instagram-feed-container {
+  padding: 4%;
+}
+@media screen and (min-width: 48rem) {
+  .defqon-instagram-feed-container {
+    padding: 2%;
+    padding-right: 0;
+    padding-top: 0;
+  }
+}
+
+.defqon-instagram-feed {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-.defqon-feed li {
+.defqon-instagram-feed li {
   flex: 0 0 100%;
   border-bottom: 1px solid #e9e9e9;
 }
 @media screen and (min-width: 48rem) {
-  .defqon-feed {
-    flex: 0 0 70%;
-  }
-  .defqon-feed li {
-    flex: 1 0 50%;
+  .defqon-instagram-feed li {
+    flex: 1 0 33%;
+    padding-right: 2%;
   }
 }
 
-.defqon-feed-image {
+.defqon-instagram-feed-title {
+  margin-bottom: 0.625rem;
+  color: #cc152a;
+  padding-bottom: 1.25rem;
+  border-bottom: 1px solid #e9e9e9;
+  line-height: 1.75rem;
+}
+
+.defqon-instagram-feed-image {
   position: relative;
 }
-@media screen and (min-width: 48rem) {
-  .defqon-feed-image {
-    padding: 2%;
-  }
-}
 
-.defqon-feed-image-desc {
+.defqon-instagram-feed-image-desc {
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -112,7 +141,7 @@ figure {
   color: #cc152a;
   font-weight: bold;
 }
-.defqon-feed-image-desc > img {
+.defqon-instagram-feed-image-desc > img {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
@@ -121,13 +150,13 @@ figure {
   margin-right: 0.875rem;
 }
 
-.defqon-feed-image-post {
+.defqon-instagram-feed-image-post {
   width: 100%;
   max-width: 100%;
   display: block;
 }
 
-.defqon-feed-image-text {
+.defqon-instagram-feed-image-text {
   padding: 0.625rem 1.25rem;
   font-size: 0.875rem;
   color: #999;
@@ -160,30 +189,29 @@ figure {
   margin-left: 0.3125rem;
 }
 
+.defqon-livestream-player {
+  height: 50vh;
+}
+.defqon-livestream-player iframe {
+  height: 100%;
+}
+@media screen and (min-width: 48rem) {
+  .defqon-livestream-player {
+    width: 70%;
+  }
+}
+
 .defqon-chat {
-  position: fixed;
-  top: 10vh;
-  right: 0;
   width: 30%;
-  height: 100vh;
-  border-left: 1px solid #e9e9e9;
+  height: 100%;
+  padding: 0 2%;
+  background: #FFF;
   display: none;
+  overflow: auto;
 }
 .defqon-chat iframe {
   width: 100%;
-}
-.defqon-chat .defqon-chat-iframe {
-  height: 50vh;
-  overflow: auto;
-}
-.defqon-chat .defqon-chat-iframe iframe {
   height: 100%;
-}
-.defqon-chat .defqon-livestream-player {
-  height: 50vh;
-}
-.defqon-chat .defqon-livestream-player iframe {
-  height: 80%;
 }
 @media screen and (min-width: 48rem) {
   .defqon-chat {
