--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -47,7 +47,11 @@ figure {
   height: 10vh;
   display: flex;
   align-items: center;
-  padding-left: rem(20px);
+  justify-content: center;
+
+  .defqon-logo {
+    // width: rem(70px);
+  }
 }
 
 .defqon-header-nav {
@@ -73,14 +77,44 @@ figure {
 .defqon-main {
   width: 100%;
   padding-top: 10vh;
+}
+
+.defqon-livestream-player-chat {
+  width: 100%;
+  height: 50vh;
+  padding: 4%;
+
+  .defqon-livestream-player {
+    height: 100%;
+
+    iframe {
+      height: 100%;
+    }
+
+    iframe + a {
+      display: none !important;
+    }
+  }
 
   @media screen and (min-width: rem(768px)) {
+    padding: 2%;
     display: flex;
     flex-direction: row;
+    height: 70vh;
   }
 }
 
-.defqon-feed {
+.defqon-instagram-feed-container {
+  padding: 4%;
+
+  @media screen and (min-width: rem(768px)) {
+    padding: 2%;
+    padding-right: 0;
+    padding-top: 0;
+  }
+}
+
+.defqon-instagram-feed {
   @extend .reset-list;
   display: flex;
   flex-direction: row;
@@ -92,23 +126,30 @@ figure {
   }
 
   @media screen and (min-width: rem(768px)) {
-    flex: 0 0 70%;
-
     li {
-      flex: 1 0 50%;
+      flex: 1 0 33%;
+      padding-right: 2%;
     }
   }
 }
 
-.defqon-feed-image {
+.defqon-instagram-feed-title {
+  margin-bottom: rem(10px);
+  color: #cc152a;
+  padding-bottom: rem(20px);
+  border-bottom: 1px solid #e9e9e9;
+  line-height: rem(28px);
+}
+
+.defqon-instagram-feed-image {
   position: relative;
 
   @media screen and (min-width: rem(768px)) {
-    padding: 2%;
+    // padding: 2%;
   }
 }
 
-.defqon-feed-image-desc {
+.defqon-instagram-feed-image-desc {
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -125,13 +166,13 @@ figure {
   }
 }
 
-.defqon-feed-image-post {
+.defqon-instagram-feed-image-post {
   width: 100%;
   max-width: 100%;
   display: block;
 }
 
-.defqon-feed-image-text {
+.defqon-instagram-feed-image-text {
   padding: rem(10px) rem(20px);
   font-size: rem(14px);
   color: #999;
@@ -164,34 +205,29 @@ figure {
   }
 }
 
+.defqon-livestream-player {
+  height: 50vh;
+
+  iframe {
+    height: 100%;
+  }
+
+  @media screen and (min-width: rem(768px)) {
+    width: 70%;
+  }
+}
+
 .defqon-chat {
-  position: fixed;
-  top: 10vh;
-  right: 0;
   width: 30%;
-  height: 100vh;
-  border-left: 1px solid #e9e9e9;
+  height: 100%;
+  padding: 0 2%;
+  background: #FFF;
   display: none;
+  overflow: auto;
 
   iframe {
     width: 100%;
-  }
-
-  .defqon-chat-iframe {
-    height: 50vh;
-    overflow: auto;
-
-    iframe {
-      height: 100%;
-    }
-  }
-
-  .defqon-livestream-player {
-    height: 50vh;
-
-    iframe {
-      height: 80%;
-    }
+    height: 100%;
   }
 
   @media screen and (min-width: rem(768px)) {
