--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -12,26 +12,35 @@
   </header>
 
   <div class="defqon-main" ng-controller="defqon.controller">
-    <ul class="defqon-feed">
-      <li ng-repeat="item in teste | orderBy:'-created_time'">
-        <div class="defqon-feed-image">
-          <div class="defqon-feed-image-desc">
-            <img ng-src="{{item.user.profile_picture}}" alt="">
-            {{item.user.username}}
-          </div>
-          <a href="{{item.link}}" target="_blank"><img ng-src="{{item.images.standard_resolution.url}}" class="defqon-feed-image-post"></a>
-          <p class="defqon-feed-image-text">{{item.caption.text}}</p>
-        </div>
-      </li>
-    </ul>
-    <div class="defqon-chat">
-      <div class="defqon-chat-iframe">
+    <section class="defqon-livestream-player-chat">
+      <div class="defqon-livestream-player">
+        <iframe src="http://www.twitch.tv/beatport/embed" frameborder="0" scrolling="no" width="100%"></iframe><a href="http://www.twitch.tv/beatport?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from Beatport on www.twitch.tv</a>
+      </div>
+      <div class="defqon-chat">
         <iframe src="http://tlk.io/defqon2015" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
       </div>
-      <div class="defqon-livestream-player">
-        <iframe src="http://www.twitch.tv/beatport/embed" frameborder="0" scrolling="no" height="278" width="100%"></iframe><a href="http://www.twitch.tv/beatport?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from Beatport on www.twitch.tv</a>
-      </div>
-    </div>
+    </section>
+    <section class="defqon-instagram-feed-container">
+      <h2 class="defqon-instagram-feed-title">
+        Instagram Feed (Atualizado em tempo real)
+      </h2>
+      <ul class="defqon-instagram-feed">
+        <li ng-repeat="item in teste | orderBy:'-created_time'">
+          <div class="defqon-instagram-feed-image">
+            <div class="defqon-instagram-feed-image-desc">
+              <img ng-src="{{item.user.profile_picture}}" alt="">
+              {{item.user.username}}
+            </div>
+            <a href="{{item.link}}" target="_blank">
+              <img ng-src="{{item.images.standard_resolution.url}}" class="defqon-instagram-feed-image-post">
+              </a>
+            <p class="defqon-instagram-feed-image-text">
+              {{item.caption.text}}
+            </p>
+          </div>
+        </li>
+      </ul>
+    </section>
   </div>
 
   <div class="defqon-notification-new-photo" ng-class="{'show': thereAreNotifications}" notification-new-photo>
