--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -221,6 +221,7 @@ figure {
   width: 30%;
   height: 100%;
   padding: 0 2%;
+  padding-right: 0;
   background: #FFF;
   display: none;
   overflow: auto;
