--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -205,6 +205,7 @@ figure {
   width: 30%;
   height: 100%;
   padding: 0 2%;
+  padding-right: 0;
   background: #FFF;
   display: none;
   overflow: auto;
