--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -3,11 +3,11 @@
   <header class="defqon-header">
     <img src="/images/defqon.svg" alt="" class="defqon-logo">
     <nav class="defqon-header-nav">
-<!--       <ul class="defqon-header-links reset-list">
+      <ul class="defqon-header-links reset-list">
         <li>
-          <a href="#">Line-Up</a>
+          <a href="http://www.defqon1.nl/wp-content/uploads/ARTISTS_SCHEMAV2.jpeg" data-lightbox="image-1" data-title="My caption">Broadcast Line-Up</a>
         </li>
-      </ul> -->
+      </ul>
     </nav>
   </header>
 
