--- a/views/partials/html_footer.ejs
+++ b/views/partials/html_footer.ejs
@@ -1,3 +1,5 @@
+  <script src="javascripts/jquery.js"></script>
+  <script src="/javascripts/lightbox.js"></script>
   <script src="javascripts/application.js"></script>
 
   <script>
