--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -1,6 +1,9 @@
 <% include ../partials/html_head %>
 
   <header class="defqon-header">
+    <a href="https://www.facebook.com/ProjetoHardstyleBrasil" target="_blank" title="Projeto Hardstyle Brasil">
+      <img src="/images/logo_phb_small.png" alt="" class="defqon-phb-logo">
+    </a>
     <img src="/images/defqon.svg" alt="" class="defqon-logo">
     <nav class="defqon-header-nav">
       <ul class="defqon-header-links reset-list">
@@ -14,10 +17,10 @@
   <div class="defqon-main" ng-controller="defqon.controller">
     <section class="defqon-livestream-player-chat">
       <div class="defqon-livestream-player">
-        <iframe src="http://www.twitch.tv/beatport/embed" frameborder="0" scrolling="no" width="100%"></iframe><a href="http://www.twitch.tv/beatport?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from Beatport on www.twitch.tv</a>
+        <!-- <iframe src="http://www.twitch.tv/beatport/embed" frameborder="0" scrolling="no" width="100%"></iframe><a href="http://www.twitch.tv/beatport?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from Beatport on www.twitch.tv</a> -->
       </div>
       <div class="defqon-chat">
-        <iframe src="http://tlk.io/defqon2015" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
+        <!-- <iframe src="http://tlk.io/defqon2015" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe> -->
       </div>
     </section>
     <section class="defqon-instagram-feed-container">
