--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -8,7 +8,7 @@
     <nav class="defqon-header-nav">
       <ul class="defqon-header-links reset-list">
         <li>
-          <a href="http://www.defqon1.nl/wp-content/uploads/ARTISTS_SCHEMAV2.jpeg" data-lightbox="image-1" data-title="My caption">Broadcast Line-Up</a>
+          <a href="http://www.defqon1.nl/wp-content/uploads/ARTISTS_SCHEMAV2.jpeg" data-lightbox="image-1" data-title="My caption">Line-Up</a>
         </li>
       </ul>
     </nav>
