--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -175,6 +175,7 @@ figure {
   padding: rem(10px) rem(20px);
   font-size: rem(14px);
   color: #999;
+  overflow: hidden;
 }
 
 .defqon-notification-new-photo {
