--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -25,7 +25,7 @@
     </section>
     <section class="defqon-instagram-feed-container">
       <h2 class="defqon-instagram-feed-title">
-        Instagram Feed (Atualização em tempo real)
+        Realtime Feed
       </h2>
       <ul class="defqon-instagram-feed">
         <li ng-repeat="item in teste | orderBy:'-created_time'">
