--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -5,7 +5,7 @@
   <nav class="defqon-header-nav">
     <ul class="defqon-header-links reset-list">
       <li>
-        <a href="http://www.defqon1.nl/wp-content/uploads/ARTISTS_SCHEMAV2.jpeg" data-lightbox="image-1" data-title="My caption">Line-Up</a>
+        <i class="icon-alarm"></i>  <a href="http://www.defqon1.nl/wp-content/uploads/ARTISTS_SCHEMAV2.jpeg" data-lightbox="image-1" data-title="My caption">Line-Up</a>
       </li>
     </ul>
   </nav>
@@ -23,7 +23,7 @@
   <section class="defqon-feed">
     <div class="defqon-feed-title">
       <h2>
-        Realtime Feed
+        <i class="icon-insta"></i> Realtime Feed
       </h2>
 <!--       <nav class="defqon-feed-filter">
         <dl class="reset-list">
