--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -57,7 +57,7 @@
 </main>
 
 <div class="defqon-notification-new-photo" ng-class="{'show': thereAreNotifications}" notification-new-photo>
-  there are new photos <span class="defqon-notification-counter">{{new_photos_counter}}</span>
+  novas fotos e vídeos <span class="defqon-notification-counter">{{new_photos_counter}}</span>
 </div>
 
 <% include ../partials/html_footer %>
