--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -5,7 +5,7 @@
   <nav class="defqon-header-nav">
     <ul class="defqon-header-links reset-list">
       <li>
-        <i class="icon-alarm"></i>  <a href="http://www.defqon1.nl/wp-content/uploads/ARTISTS_SCHEMAV2.jpeg" data-lightbox="image-1" data-title="My caption">Line-Up</a>
+        <i class="icon-alarm"></i>  <a href="http://www.defqon1.nl/wp-content/uploads/ARTISTS_SCHEMAV2.jpeg" data-lightbox="image-1" data-title="Broadcast Line-Up">Line-Up</a>
       </li>
     </ul>
   </nav>
