--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -17,7 +17,7 @@
   <meta property="og:site_name"   content="Defqon.1 2015 - Realtime Updates">
   <meta property="og:type"        content="website">
   <title>Cobertura Defqon.1 2015 - Projeto Hardstyle Brasil e Eurodance.com.br</title>
-  <link rel="stylesheet" href="stylesheets/defqon.css">
+  <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://cdn.socket.io/socket.io-1.1.0.js" charset="utf-8"></script>
 </head>
 <body>
