--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -14,7 +14,8 @@
 <main class="defqon-content" ng-controller="defqon.controller">
   <section class="defqon-player-chat">
     <div class="defqon-player">
-      <iframe src="http://www.twitch.tv/beatport/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+      <!-- <iframe src="http://www.twitch.tv/beatport/embed" frameborder="0" scrolling="no" width="100%"></iframe> -->
+      <iframe src="https://www.youtube.com/embed/0Owxv-oPgIw" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="defqon-chat">
       <iframe src="http://tlk.io/defqon2015" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
