--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -14,7 +14,7 @@
 <main class="defqon-content" ng-controller="defqon.controller">
   <section class="defqon-player-chat">
     <div class="defqon-player">
-      <iframe src="https://www.youtube.com/embed/0Owxv-oPgIw" width="100%" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" src="https://www.youtube.com/embed/7T0NrGr8d-c" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="defqon-chat">
       <iframe src="http://tlk.io/defqon2015" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
